# duckdb-pcap

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  extension_config.cmake  justfile  vcpkg.json
.cache/clangd/index/: ppcap_extension.cpp.951FA2DD1228953E.idx  ppcap_extension.hpp.04BD5B0F920A9C75.idx
.github/workflows/: MainDistributionPipeline.yml
src/: ppcap_extension.cpp
src/include/: ppcap_extension.hpp
test/sql/: ppcap.test
